Fixed overlapping modal bug.

--- a/frontend/src/Components/SubCardv2.css
+++ b/frontend/src/Components/SubCardv2.css
@@ -44,3 +44,7 @@
   justify-content: space-evenly;
   flex-direction: row;
 }
+
+.modal-backdrop {
+  background-color: rgba(0, 0, 0, 0.377);
+}
